<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_choosing_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".general_activities.ChoosingActivity">

    <TextView
        android:id="@+id/tv_hello_name"
...
        android:shadowColor="#40000000"
        android:shadowDy="4"
        android:shadowRadius="4"
        android:text="@string/what_would_you_like_to_find"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/iv_choosing_button_apt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="What would you like to find?" />

    <ImageView
...
